--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@tailwind typography;
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
@@ -15,9 +14,10 @@ body {
     content: "";
     width: 100%;
     height: 100vh;
-    /* Use custom color for background 
-    background-color: #272828;*/
-    background-image: url("../public/bg.png");
+    //background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
+    // background: #D3D3D3;
+    background: rgb(34,13,30);
+background: radial-gradient(circle, rgba(34,13,30,1) 0%, rgba(0,0,0,1) 100%);
     position: fixed;
     left: 0;
     top: 0;
@@ -28,44 +28,38 @@ body {
   }
 }
 
-/* Add hover styles for links */
-a:hover {
-  text-decoration: underline;
+.text-shadow{
+  text-shadow: 0px 2px 0px rgb(0 0 0 / 30%);
 }
 
-/* Add a border radius to all elements */
+.adjacent-post{
+  & .arrow-btn{
+    transition: width 300ms ease;
+    width: 50px;
+  }
+  &:hover{
+    & .arrow-btn{
+      width: 60px;
+    }
+  }
+}
+
+.react-multi-carousel-list {
+  & .arrow-btn{
+    transition: width 300ms ease;
+    width: 30px;
+    &:hover{
+      width: 60px;
+    }
+  }
+  
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 * {
-  border-radius: 0.25rem;
-}
-
-/* Add a box shadow to all elements */
-.shadow {
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.15);
-}
-
-/* Add a gradient background to a specific element */
-.gradient-bg {
-  background: linear-gradient(to right bottom, #6d327c, #485DA6, #00a1ba, #01b18e, #32b37b);
-}
-
-/* Use responsive typography */
-h1 {
-  @apply text-5xl md:text-6xl;
-}
-
-h2 {
-  @apply text-3xl md:text-4xl;
-}
-
-p {
-  @apply text-lg md:text-xl;
-}
-
-/* Add custom styles to code blocks */
-pre {
-  @apply bg-gray-100 p-4 rounded-md shadow;
-}
-
-code {
-  @apply bg-gray-200 rounded-md px-2 py-1;
+  box-sizing: border-box;
 }
